--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,13 @@
 name: Ruby
 
-on: [push,pull_request]
+on: [push, pull_request]
 
 jobs:
   test:
     strategy:
       fail-fast: true
       matrix:
-        ruby: [ 2.6, 2.7, 3.0, 3.1 ]
+        ruby: [2.6, 2.7, 3.0, 3.1]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,5 +16,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
+      - name: Run prettier
+        run: bundle exec rbprettier --check '**/*.rb'
       - name: Run the default task
         run: bundle exec rake
